syntax = "proto3";

package v1;

option go_package = "v1/proto";

import "google/protobuf/timestamp.proto";

message SecretCard {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string url = 4;
  string login = 5;
  string password = 6;
  string text = 7;
  google.protobuf.Timestamp update_time = 8;
}

message FileSecretCard {
  string id = 1;
  string card_id = 2;
  bytes file = 3;
}

message MetaSecretCard {
  string id = 1;
  string card_id = 2;
  string key = 3;
  string value = 4;
}

message Empty {}

message CreateSecretCardRequest {
  string user_id = 1;
  string name = 2;
  string url = 3;
  string login = 4;
  string password = 5;
  string text = 6;
}

message ReadSecretCardRequest {
  string id = 1;
}

message UpdateSecretCardRequest {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string url = 4;
  string login = 5;
  string password = 6;
  string text = 7;
}

message DeleteSecretCardRequest {
  string id = 1;
}

message ListSecretCardRequest {
  string user_id = 1;
}

message ListSecretCardResponse {
  repeated SecretCard cards = 1;
}
service SecretCardService {
  rpc CreateSecretCard(CreateSecretCardRequest) returns (SecretCard);
  rpc ReadSecretCard(ReadSecretCardRequest) returns (SecretCard);
  rpc UpdateSecretCard(UpdateSecretCardRequest) returns (SecretCard);
  rpc DeleteSecretCard(DeleteSecretCardRequest) returns (Empty);
  rpc ListSecretCard(ListSecretCardRequest) returns (ListSecretCardResponse);
}

message ListMetaSecretCardRequest {
  string card_id = 1;
}

message ListMetaSecretCardResponse {
  repeated MetaSecretCard cards = 1;
}

message ReadMetaSecretCardRequest {
  string id = 1;
}

message DeleteMetaSecretCardRequest {
  string id = 1;
}


service MetaSecretCardService {
  rpc CreateMetaSecretCard(MetaSecretCard) returns (MetaSecretCard);
  rpc ReadMetaSecretCard(ReadMetaSecretCardRequest) returns (MetaSecretCard);
  rpc UpdateMetaSecretCard(MetaSecretCard) returns (MetaSecretCard);
  rpc DeleteMetaSecretCard(DeleteMetaSecretCardRequest) returns (Empty);
  rpc ListMetaSecretCard(ListMetaSecretCardRequest) returns (ListMetaSecretCardResponse);
}

message CreateFileSecretCardRequest {
  string card_id = 1;
  bytes file = 2;
}

message ReadFileSecretCardRequest {
  string id = 1;
}

message UpdateFileSecretCardRequest {
  string id = 1;
  string card_id = 2;
  bytes file = 3;
}

message DeleteFileSecretCardRequest {
  string id = 1;
}

message ListFileSecretCardRequest {
  string card_id = 1;
}

message ListFileSecretCardResponse {
  repeated FileSecretCard files = 1;
}

service FileSecretCardService {
  rpc CreateFileSecretCard(CreateFileSecretCardRequest) returns (FileSecretCard);
  rpc ReadFileSecretCard(ReadFileSecretCardRequest) returns (FileSecretCard);
  rpc UpdateFileSecretCard(UpdateFileSecretCardRequest) returns (FileSecretCard);
  rpc DeleteFileSecretCard(DeleteFileSecretCardRequest) returns (Empty);
  rpc ListFileSecretCard(ListFileSecretCardRequest) returns (ListFileSecretCardResponse);
}
